--- a/Desafio_Jawas/frontend/html/login.html
+++ b/Desafio_Jawas/frontend/html/login.html
@@ -28,7 +28,7 @@
     </header>
 
     <div class="col-5 ps-5 pe-5" style="background-color: rgba(220, 255, 132, 0.855);">
-        <h1 class="mb-4 text-center">INICIA SESIÓN</h1>
+        <h1 class="mb-4 text-center">INICIAR SESIÓN</h1>
 
         <div id="msgExito" class="alert alert-info d-none"></div>
 
