--- a/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
+++ b/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <!-- CSS -->
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
@@ -18,89 +25,116 @@
     <title>Desguazar Lote</title>
 </head>
 
-<body>
+<br>
 
-    <header>
+<header class="d-flex flex-column align-items-center p-3 "
+    style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <div class="header-contenido d-flex align-items-center justify-content-center">
         <a href="../html/home.html" id="inicio">
-            <img src="../assets/Jawas.webp" alt="logo" width="40px">
+            <img src="../assets/Imagen 1.png" alt="logo" width="110px">
         </a>
-        <h1>JAWAS JOYAS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/perfil.png" alt="logo" width="35px">
+        <h1 class="titulo">JAWAS GEMS</h1>
+        <a href="#" id="perfil">
+            <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+            <li class="nav-item dropdown" style="  list-style-type: none;">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                    <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                </ul>
+            </li>
         </a>
+    </div>
+    <br>
+</header>
 
-        <nav>
-            <button>
-                <a href="despieceLote.html">Despiezar lote</a>
-            </button>
+<nav id="navbarComponentes" class="mt-4 mb-4"
+    style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
+    <button id="btnUser">
+        <a href="despieceLote.html">Despiezar lote</a>
+    </button>
 
-            <button>
-                <a href="componentes.html"> Gestionar componentes</a>
-            </button>
-        </nav>
-    </header>
+    <button id="btnUser">
+        <a href="componentes.html"> Gestionar componentes</a>
+    </button>
+</nav>
 
-    <h1> DESGUAZAR LOTE </h1>
 
-    <div id="introducirComponentes">
+<div class="container" style="padding-top: 80px;">
+
+    <h1 class=" texto text-center mt-3 mb-3 ">DESGUAZAR LOTE </h1>
+
+    <div id="introducirComponentes" class="text-center">
 
         <select id="selectComponentes"></select>
 
         <label for="descripcionComponente"></label>
         <input type="text" id="descripcionComponente" placeholder="Descripción">
-        <span id="msgErrorDescripcion"></span>
-
 
         <label for="cantidadComponente"></label>
         <input type="text" id="cantidadComponente" placeholder="Cantidad">
-        <span id="msgErrorCantidad"></span>
 
-
-        <input type="button" value="Añadir" id="btnAñadirComponente">
-
-        <span id="msgComponente"></span>
-
-        <span id="msgExito"></span><br>
+        <input class="btn btn-outline-primary mb-3 mt-3 mx-2 " type="button" value="Añadir" id="btnAñadirComponente">
 
     </div>
 
-    <div id="interiorLote">
+</div>
+<div class="text-center mt-4">
+    <span id="msgErrorDescripcion"></span></br>
+    <span id="msgErrorCantidad"></span></br>
+    <span id="msgComponente"></span></br>
+    <span id="msgExito"></span><br></br>
+</div>
+<div id="interiorLote" class="text-center">
 
-        <h1> INTERIOR LOTE</h1>
+    <h1 class=" texto text-center mt-3 mb-3 "> INTERIOR LOTE</h1>
 
-        <table id="tablaInfoLotes"></table>
-
-        <input type="button" value="Seleccionar otro lote" id="btnOtroLote">
-
+    <div class="tabla-centro-despiece-lote text-center mb-4 mt-4">
+        <table id="tablaInfoLotes" class="text-center"></table>
     </div>
+    <input class="btn btn-outline-info mb-3 mt-3 mx-2" type="button" value="Seleccionar otro lote" id="btnOtroLote">
 
-    <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
-    </video>
+</div>
 
-    <!-- Pie de página -->
-    <footer class="d-flex flex-column align-items-center p-3"
-        style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
-        <div class="footer-contenido d-flex flex-column align-items-center justify-content-center">
-            <div class="redes-sociales mb-3 mt-3">
-                <p class="text-center mb-3">Puedes encontrarnos en:</p>
-                <a href="https://www.instagram.com/" target="_blank" class="mr-4"><img
-                        src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
-                <a href="https://twitter.com/?lang=es " target="_blank" class="mr-4"><img
-                        src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
-                <a href="https://www.facebook.com/?locale=es_ES" target="_blank" class="mr-4"><img
-                        src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
-            </div>
-            <div class="politica-privacidad mb-3">
-                <a href="politica-de-privacidad.html">Política de Privacidad</a>
-            </div>
-            <div class="copyright mb-3">
-                <span>&copy; 2023 Jawas Joyas</span>
-            </div>
+<video autoplay muted loop id="myVideo">
+    <source src="../assets/videoFondo.mp4" type="video/mp4">
+</video>
+
+<!-- Pie de página -->
+<footer class="d-flex flex-column align-items-center p-3"
+    style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <div class="footer-contenido d-flex flex-column align-items-center justify-content-center">
+        <div class="redes-sociales mb-3 mt-3">
+            <p class="text-center mb-3">Puedes encontrarnos en:</p>
+            <a href="https://www.instagram.com/" target="_blank" class="mr-4"><img src="../assets/icono_instagram.webp"
+                    alt="Instagram" height="68px"></a>
+            <a href="https://twitter.com/?lang=es " target="_blank" class="mr-4"><img src="../assets/icono_twitter.png"
+                    alt="Twitter" height="55px"></a>
+            <a href="https://www.facebook.com/?locale=es_ES" target="_blank" class="mr-4"><img
+                    src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
         </div>
-    </footer>
+        <div class="politica-privacidad mb-3">
+            <a href="politica-de-privacidad.html">Política de Privacidad</a>
+        </div>
+        <div class="copyright mb-3">
+            <span>&copy; 2023 Jawas Joyas</span>
+        </div>
+    </div>
+</footer>
 
 </body>
 <!-- <script type="module" src="../js/despieceLoteDetalles.js"></script> -->
 <script type="module" src="../dist/despieceLoteDetalles.js"></script>
+
 </html>
