--- a/Desafio_Jawas/frontend/html/joyasDetalle.html
+++ b/Desafio_Jawas/frontend/html/joyasDetalle.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <!-- CSS -->
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <!-- icon -->
     <link rel="icon" type="image/png" href="../assets/Imagen 1.png">
@@ -20,56 +27,89 @@
 
 <body>
 
-    <header>
+    <header class="d-flex flex-column align-items-center p-3 "
+    style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
+    <div class="header-contenido d-flex align-items-center justify-content-center">
         <a href="../html/home.html" id="inicio">
-            <img src="../assets/Jawas.webp" alt="logo" width="40px">
+            <img src="../assets/Imagen 1.png" alt="logo" width="110px">
         </a>
-        <h1>JAWAS JOYAS</h1>
-        <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/perfil.png" alt="logo" width="35px">
+        <h1 class="titulo">JAWAS GEMS</h1>
+        <a href="#" id="perfil">
+            <img src="../assets/jawaperfil.png" alt="logo" width="100px">
+            <li class="nav-item dropdown" style="  list-style-type: none;">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../html/home.html">Home</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="../html/perfil.html">Perfil</a></li>
+                    <li><a class="dropdown-item" href="../html/preHome.html">Cambiar Rol</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="../html/">Cerrar Sesión</a></li>
+                </ul>
+            </li>
         </a>
-
-        <nav>
-            <button>
-                <a href="joyas.html">Gestionar Joyas</a>
-            </button>
-
-            <button>
-                <a href="recetas.html"> Gestionar Recetas</a>
-            </button>
-        </nav>
+    </div>
+    <br>
     </header>
 
-    <h1>GENERADOR DE JOYA ALEATORIA</h1>
-    <h4>Debes seleccionar que tipo de joya deseas crear, que receta utilizar e insertar una imágen de referencia</h4>
-    <div id="generadorJoya">
-        <select id="selectJoya"></select>
-        <select id="selectReceta"></select>
-        <form id="formImagen" action="http://127.0.0.1:8000/api/joya/subir" method="post" enctype="multipart/form-data">
-            Añadir imagen: <input name="image" type="file" accept="image/*" />
-            <input type="submit" name="subir" value="Subir imagen" />
-        </form>
+    <nav id="navbarComponentes" class="mt-4 mb-4"
+    style="display: flex; justify-content: center; justify-self: unset; margin-left: 350px; margin-right: 350px;">
+        <button id="btnUser">
+            <a href="joyas.html">Gestionar Joyas</a>
+        </button>
 
-        <div id="respuesta"></div>
-        <img>
+        <button id="btnUser">
+            <a href="recetas.html"> Gestionar Recetas</a>
+        </button>
+    </nav>
 
-        <input type="button" value="Generar Joya" id="btnGenerarJoya">
-        <input type="button" value="Crear otra Joya" id="btnVolverIntento">
+    <div class="container text-center" style="padding-top: 80px;">
+        <h1 class=" texto text-center mt-3 mb-3 ">GENERADOR DE JOYA ALEATORIA</h1>
+
+        <h4 style="color: white;">Debes seleccionar que tipo de joya deseas crear, que receta utilizar e insertar una imágen de referencia</h4>
+
+        <div id="introducirComponentes" class="text-center mb-4">
+            <select id="selectJoya"></select>
+            <select id="selectReceta"></select><br>
+        </div>
+
+        <div id="introducirComponentes" class="text-center mb-4">
+            <form id="formImagen" action="http://127.0.0.1:8000/api/joya/subir" method="post" enctype="multipart/form-data">
+                Añadir imagen: <input name="image" type="file" accept="image/*" />
+                <input type="submit" name="subir" value="Subir imagen" />
+            </form>
+        </div>
+
+        <input type="button" value="Generar Joya" id="btnGenerarJoya"  class="btn btn-outline-primary mb-3 mt-3 mx-2">
+        <input type="button" value="Crear otra Joya" id="btnVolverIntento"  class="btn btn-outline-primary mb-3 mt-3 mx-2">
 
         <span id="msgsuficientesComponentes"></span>
+
     </div>
 
-    <div id="inventario">
-        <h1>INVENTARIO</h1>
-        <table id="tablaInventario"> </table>
+    <div id="inventario" class="container text-center">
+        <h1 class=" texto text-center mt-3 mb-3 ">INVENTARIO</h1>
+        <div class="tabla-centro-despiece-lote text-center mb-4 mt-4">
+            <table id="tablaInventario"> </table>
+        </div>
+        
     </div>
 
 
-
-    <input type="button" value="Ver Joyas" id="btnVolverJoyas">
+    <div class="text-center">
+        <input type="button" value="Ver Joyas" id="btnVolverJoyas" class="btn btn-info mb-4 ">
+    </div>
+    
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <!-- Pie de página -->
