--- a/Desafio_Jawas/frontend/html/recetas.html
+++ b/Desafio_Jawas/frontend/html/recetas.html
@@ -99,7 +99,7 @@
     </div>
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/video.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <footer class="d-flex flex-column align-items-center p-3"
