--- a/Desafio_Jawas/frontend/html/registro.html
+++ b/Desafio_Jawas/frontend/html/registro.html
@@ -94,7 +94,7 @@
     </div>
 
     <video autoplay muted loop id="myVideo">
-        <source src="../assets/f.mp4" type="video/mp4">
+        <source src="../assets/videoFondo.mp4" type="video/mp4">
     </video>
 
     <footer class="p-3 col-5"
